--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                         <p>Para la codificación de este problema utilizaremos Google colab y el lenguaje en el que estara programado sera Python
                             
                         </p>
+                        <br>
+                        <center>
+                             <img src='assets/img/imagen1.PropagacionErrores'width="400px"height="400px">
+                        </center>
                     </div>
                     <!-- Divider-->
                     <hr class="my-4" />
