--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                         </p>
                         <br>
                         <center>
-                             <img src='assets/img/imagen1.PropagacionErrores.JPG'width="400px"height="400px">
+                             <img src='assets/img/imagen1.PropagacionErrores.JPG'width="600px"height="600px">
+                             <img src="assets/img/Resultado_PropagacionErrores.JPG"'width="600px"height="600px">
                         </center>
                     </div>
                     <!-- Divider-->
